oa changes for objectKey, OACompare